--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -65,3 +65,4 @@ jobs:
           git show-ref --verify "refs/heads/${{ inputs.ref }}"
 
           git push origin ${{ inputs.ref }}
+          git push origin tag ${{ inputs.version }}
