Check if commit would fail due to lack of changes
Sometimes we might run this when the version number is already
correct; e.g. when cleaning up from a failed release attempt.

In that case, skip the commit and apply the tag to the existing last
commit.

--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -46,7 +46,13 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add euphonic/version.py CITATION.cff
-          git commit -m "Set version number"
+
+          if git diff --cached --quiet
+          then
+            echo "No files were changed, skipping commit"
+          else
+            git commit -m "Set version number"          
+          fi
 
       - name: "Tag new commit"
         shell: bash -l {0}
