--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -33,8 +33,10 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout project (for test files)
+      - name: Checkout project
         uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -106,7 +108,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Ensure tags are fetched for versioning
+          fetch-tags: true
+
 
       - name: Create source distribution
         shell: bash -l {0}
