--- a/.github/workflows/set_version.yml
+++ b/.github/workflows/set_version.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: "Target branch, tag or SHA"
+        description: "Target branch"
         required: true
         type: string
       version:
@@ -13,15 +13,22 @@ on:
         type: string
 
 jobs:
-  show-branch:
+  set-version:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Show input parameters
-        shell: bash -l {0}
-        run: |
-          echo "${{ inputs.ref }}"
-          echo "${{ inputs.version }}"
+      - name: Validate and normalise version number
+        shell: python
+        run : |
+          import os
+          from packaging.version import Version
+
+          version_string = 'v' + str(Version("${{ inputs.version }}"))
+
+          print(f"Normalised version string: {version_string}")
+
+          with open(os.environ["GITHUB_ENV"], "a") as github_env:
+              print(f"VERSION_STRING={version_string}", file=github_env)
 
       - uses: actions/checkout@v4
         with:
@@ -29,12 +36,51 @@ jobs:
           fetch-tags: true
           fetch-depth: 0
 
-      - name: "Tag locally"
+      - name: "Update version.py"
         shell: bash -l {0}
         run: |
-          git tag ${{ inputs.version }}
+          echo "__version__ = \"${VERSION_STRING}\"" > euphonic/version.py
+          cat euphonic/version.py
+
+      - name: "Update CITATION.cff"
+        shell: bash -l {0}
+        run: |
+          sed -i "s/^version:\ .*/version: ${VERSION_STRING}/" CITATION.cff
+          sed -i "s/^date-released:\ .*/date-released: $(date -I)/" CITATION.cff
+
+      - name: "Create commit"
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add euphonic/version.py CITATION.cff
+
+          if git diff --cached --quiet
+          then
+            echo "No files were changed, skipping commit"
+          else
+            git commit -m "Set version number"          
+          fi
+
+      - name: "Tag commit"
+        shell: bash -l {0}
+        run: |
+          if test $(git describe --tags --exact-match) = $VERSION_STRING
+          then
+            echo "The correct tag is already on this commit"
+          else
+            git tag $VERSION_STRING
+          fi
 
       - name: "Show updated log"
+        run: |
+          git log --pretty=oneline --abbrev-commit --decorate | head -n 5
+          git diff HEAD^
+
+      - name: "Push commit to branch"
         shell: bash -l {0}
         run: |
-          git log --pretty=oneline --abbrev-commit --decorate | head
+          # Verify that ref is a branch (as opposed to a tag or hash)
+          git show-ref --verify "refs/heads/${{ inputs.ref }}"
+
+          git push origin ${{ inputs.ref }}
+          git push origin tag $VERSION_STRING
