--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -8,14 +8,17 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-test_command = python run_tests.py --report
+test_command = python {toxinidir}/../tests_and_analysis/test/run_tests.py --report
+requirements_dir = {toxinidir}/../tests_and_analysis
 
 # Test PyPI source distribution
 [testenv:pypisource-{py310,py312}]
+passenv = CC CC_LD LDFLAGS CPPFLAGS
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    spglib  # Not interested here in whether source builds of spglib work
+    -r{[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     python -m pip install \
     --force-reinstall \
@@ -28,7 +31,7 @@ commands = {[testenv]test_command}
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    -r{[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     python -m pip install \
     --force-reinstall \
@@ -36,15 +39,34 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py310-min]
+[testenv:pypi-py310-min-win-linux]
 install_command = python -m pip install --force-reinstall {opts} {packages}
+platform =
+    linux: linux
+    windows: win32
 deps =
-    numpy==1.21.3
+    numpy==1.24.0
 commands_pre =
     python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+        -r{[testenv]requirements_dir}/minimum_euphonic_requirements.txt
     python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+        -r{[testenv]requirements_dir}/tox_requirements.txt
+    python -m pip install \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
+commands = {[testenv]test_command}
+
+[testenv:pypi-py310-min-mac]
+install_command = python -m pip install --force-reinstall {opts} {packages}
+platform =
+    mac: darwin
+deps =
+    numpy==1.24.0
+commands_pre =
+    python -m pip install --force-reinstall \
+        -r{[testenv]requirements_dir}/minimum_euphonic_requirements_mac.txt
+    python -m pip install --force-reinstall \
+        -r{[testenv]requirements_dir}/tox_requirements.txt
     python -m pip install \
     'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
@@ -57,7 +79,7 @@ conda_channels =
     conda-forge
     default
 conda_deps =
-    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
+    --file={[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
 # Brille not available on conda
@@ -72,7 +94,7 @@ conda_channels =
     conda-forge
     default
 conda_deps =
-    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
+    --file={[testenv]requirements_dir}/tox_requirements.txt
 commands_pre =
     conda install numpy=1.22
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
