Try replacing pip with uv pip in main tox test suite

--- a/tox.ini
+++ b/tox.ini
@@ -12,17 +12,17 @@ passenv = CC CC_LD LDFLAGS CPPFLAGS
 
 [testenv:{py310,py311,py312}]
 install_command =
-    python -m pip install \
+    uv pip install \
         --force-reinstall \
         --upgrade \
-        --upgrade-strategy eager \
+        # --upgrade-strategy eager \
         {opts} \
         {packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install \
+    uv pip install \
     --upgrade \
     --upgrade-strategy eager \
     '{toxinidir}[matplotlib,phonopy_reader,brille]'
@@ -34,9 +34,9 @@ commands =
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
-    python -m pip install \
+    uv pip install \
         --upgrade \
-        --upgrade-strategy eager \
+        # --upgrade-strategy eager \
         '{toxinidir}'
 commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
@@ -45,9 +45,9 @@ commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib o
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
-    python -m pip install \
+    uv pip install \
         --upgrade \
-        --upgrade-strategy eager \
+        #--upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
 commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
@@ -56,9 +56,9 @@ commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
-    python -m pip install \
+    uv pip install \
         --upgrade \
-        --upgrade-strategy eager \
+        #--upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
@@ -67,9 +67,9 @@ commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_ext
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
-    python -m pip install \
+    uv pip install \
         --upgrade \
-        --upgrade-strategy eager \
+        #--upgrade-strategy eager \
         '{toxinidir}[brille]'
 commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
@@ -78,9 +78,9 @@ commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 install_command = {[testenv:py310]install_command}
 deps = {[testenv:py310]deps}
 commands_pre =
-    python -m pip install \
+    uv pip install \
         --upgrade \
-        --upgrade-strategy eager \
+        #--upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib,brille]'
 commands =
     {[testenv]test_command} --cov -m multiple_extras
@@ -88,37 +88,37 @@ commands =
 [testenv:py310-minrequirements-linux]
 whitelist_externals = rm
 install_command =
-    python -m pip install --force-reinstall {opts} {packages}
+    uv pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
     numpy==1.24.0
     {[testenv:py310]deps}
 commands_pre =
-    python -m pip install --force-reinstall \
+    uv pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    python -m pip install --force-reinstall \
+    uv pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     # Force rebuild of euphonic extension to avoid Numpy clash
     rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
+    uv pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command}
 
 [testenv:py310-minrequirements-mac]
 whitelist_externals = rm
 install_command =
-    python -m pip install --force-reinstall {opts} {packages}
+    uv pip install --force-reinstall {opts} {packages}
 platform =
     macos: darwin
 deps =
     numpy==1.24.0
     {[testenv:py310]deps}
 commands_pre =
-    python -m pip install --force-reinstall \
+    uv pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
-    python -m pip install --force-reinstall \
+    uv pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     # Force rebuild of euphonic extension to avoid Numpy clash
     rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
+    uv pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command}
