--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,12 +27,25 @@ jobs:
         with:
           fetch-depth: 0 # Ensure tags are fetched for versioning
           fetch-tags: true
-      - uses: actions/setup-python@v5
-        with:
-          python-version: |
-              3.10
-              3.11
-              3.12
+      # - uses: actions/setup-python@v5
+      #   with:
+      #     python-version: |
+      #         3.10
+      #         3.11
+      #         3.12
+      - uses: astral-sh/setup-uv@v4
+
+      - name: Install uv python 3.10, 3.12
+        shell: bash -l {0}
+        run: |
+          uv python install 3.10 3.11 3.12
+
+      - name: Install uv python 3.11 (workflow dispatch)
+        if: github.event_name == 'workflow_dispatch'
+        shell: bash -l {0}
+        run: |
+          uv python install 3.11
+
       - name: Install llvm on MacOS
         if: startsWith(matrix.os, 'macos')
         shell: bash -l {0}
@@ -63,11 +76,10 @@ jobs:
           echo "CC_LD: $CC_LD"
           echo "CC_LD=$CC_LD" >> $GITHUB_ENV
 
-      - name: Update pip and install dependencies
-        shell: bash -l {0}
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r tests_and_analysis/ci_requirements.txt
+      # - name: Update pip and install dependencies
+      #   shell: bash -l {0}
+      #   run: |
+      #     uv pip install -r tests_and_analysis/ci_requirements.txt
 
       - name: Run tests, skip Python 3.11 unless workflow dispatch
         if: github.event_name != 'workflow_dispatch'
@@ -75,14 +87,14 @@ jobs:
           TOX_SKIP_ENV: '.*?(py311).*?'
           TOX_PARALLEL_NO_SPINNER: 1
         shell: bash -l {0}
-        run: python -m tox --parallel
+        run: uvx tox==3.28.0 --parallel
 
       - name: Run tests, workflow dispatch so test all Python versions
         if: github.event_name == 'workflow_dispatch'
         env:
           TOX_PARALLEL_NO_SPINNER: 1
         shell: bash -l {0}
-        run: python -m tox --parallel
+        run: uvx tox==3.28.0 --parallel
 
       - name: Upload test results
         if: always()
