phonopy_reader still uses underscore for test mark, whoops

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = {[testenv]test_command} --cov
 # Test with no extras
 [testenv:py310-base]
 extras = {[testenv]extras}
-commands = {[testenv]test_command} --cov -m "not (phonopy-reader or matplotlib or brille)"
+commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py310-matplotlib]
@@ -44,7 +44,7 @@ commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 extras =
     {[testenv]extras}
     phonopy-reader
-commands = {[testenv]test_command} --cov -m "phonopy-reader and not multiple_extras"
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
 # Test with brille extra only
 [testenv:py310-brille]
