Enable minrequirements-mac and tweak setup

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox>=4
 # The python environments to run the tests in
-envlist = py310,py311,py312,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,no-c}
+envlist = py310,py311,py312,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -95,7 +95,8 @@ commands_pre =
 commands = {[testenv]test_command}
 
 [testenv:py310-minrequirements-mac]
-whitelist_externals = rm
+skip_install = True
+allowlist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
 platform =
