Tweak min-requirements mac recipe to follow tox 4 updates

--- a/tox.ini
+++ b/tox.ini
@@ -103,7 +103,7 @@ platform =
     macos: darwin
 deps =
     numpy==1.24.0
-    {[testenv:py310]deps}
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
