Simpler platform definitions

--- a/tox.ini
+++ b/tox.ini
@@ -65,8 +65,7 @@ commands =
 
 [testenv:py310-no-c]
 install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
-platform =
-    linux: linux
+platform = linux
 extras =
     {[testenv]extras}
     matplotlib
@@ -79,8 +78,7 @@ skip_install = True
 allowlist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
-platform =
-    linux: linux
+platform = linux
 deps =
     numpy==1.24.0
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
@@ -99,8 +97,7 @@ skip_install = True
 allowlist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
-platform =
-    macos: darwin
+platform = darwin
 deps =
     numpy==1.24.0
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
