Tox: extras don't work with skip_install, pass directly

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -12,47 +12,38 @@ requirements_dir = {toxinidir}/../tests_and_analysis
 passenv =
     EUPHONIC_VERSION
     CC_LD
-extras =
-    test
-    matplotlib
-    phonopy-reader
-    brille
+setenv =
+    EXTRAS=[test,matplotlib,phonopy-reader,brille]
 
 # Test PyPI source distribution
 [testenv:pypisource-{py310,py312}]
 passenv = CC CC_LD LDFLAGS CPPFLAGS
-install_command = python -m pip install {opts} {packages}
 commands_pre =
     python -m pip install \
     --force-reinstall \
-    'euphonic=={env:EUPHONIC_VERSION}' \
+    'euphonic{env:EXTRAS}=={env:EUPHONIC_VERSION}' \
     --no-binary 'euphonic'
 commands = {[testenv]test_command}
 
-
 [testenv:pypi-{py310,py311,py312}]
-install_command = python -m pip install {opts} {packages}
 commands_pre =
     python -m pip install \
     --force-reinstall \
-    'euphonic=={env:EUPHONIC_VERSION}' \
+    'euphonic{env:EXTRAS}=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
 [testenv:pypi-py310-min-win-linux]
-install_command = python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
     windows: win32
 deps =
     numpy==1.21.3
-extras =
-    test
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     python -m pip install \
-    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
+    'euphonic{env:EXTRAS}=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
