Update tox passenv syntax

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -17,7 +17,7 @@ setenv =
 
 # Test PyPI source distribution
 [testenv:pypisource-{py310,py312}]
-passenv = CC CC_LD LDFLAGS CPPFLAGS
+passenv = CC, CC_LD, LDFLAGS, CPPFLAGS
 commands_pre =
     python -m pip install \
     --force-reinstall \
