Enable min-requirements run, bump numpy version to match project

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -33,15 +33,13 @@ commands_pre =
     --only-binary 'euphonic'
 commands = {[testenv]test_command}
 
-[testenv:pypi-py310-min-win-linux]
-platform =
-    linux: linux
-    windows: win32
+[testenv:pypi-py310-min]
+platform = (linux)|(win32)
 deps =
-    numpy==1.21.3
+    numpy==1.24
 commands_pre =
     python -m pip install --force-reinstall \
-        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+        -r{toxinidir}/../tests_and_analysis/minimum_euphonic_requirements.txt
     python -m pip install \
     'euphonic{env:EXTRAS}=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
@@ -71,7 +69,7 @@ install_command = conda install {packages}
 conda_channels =
     conda-forge
     default
-deps = numpy==1.22
+deps = numpy==1.24
 extras =
     test
     matplotlib
