Add tox requirements to pypi min-requirements release test

--- a/build_utils/release_tox.ini
+++ b/build_utils/release_tox.ini
@@ -37,6 +37,7 @@ commands = {[testenv]test_command}
 platform = (linux)|(win32)
 deps =
     numpy==1.24
+    -r{toxinidir}/../tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/../tests_and_analysis/minimum_euphonic_requirements.txt
