Migrate to tox 4 (#332)
* Migrate tox.ini to tox 4
* Remove custom install from tox.ini
* Add test for no C extension.
* Rename phonopy_reader to phonopy-reader for tox support (everywhere needed)
* Add verbose flag to tox's pip install command
* use tox 4 for release testing

---------

Co-authored-by: Adam J. Jackson <a.j.jackson@physics.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,99 +1,87 @@
 [tox]
+requires = tox>=4
 # The python environments to run the tests in
-envlist = py310,py311,py312,py310-{base,matplotlib,phonopy_reader,brille,all},py310-minrequirements-{mac,linux}
-# Skip the execution of setup.py as we do it with the correct arg in commands_pre below
-skipsdist = True
-whitelist_externals = git
+envlist = py310,py311,py312,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
+allowlist_externals = git
 
 [testenv]
+package = wheel
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
-passenv = CC CC_LD LDFLAGS CPPFLAGS
-
-[testenv:{py310,py311,py312}]
+passenv = CC_LD
 install_command =
-    python -m pip install \
+    python -m pip install -v \
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
         {opts} \
         {packages}
-deps =
-    numpy
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands_pre =
-    python -m pip install \
-    --upgrade \
-    --upgrade-strategy eager \
-    '{toxinidir}[matplotlib,phonopy_reader,brille]'
-commands =
-    {[testenv]test_command} --cov
+extras =
+    test
+
+[testenv:{py310,py311,py312}]
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+    brille
+commands = {[testenv]test_command} --cov
 
 # Test with no extras
 [testenv:py310-base]
-install_command = {[testenv:py310]install_command}
-deps = {[testenv:py310]deps}
-commands_pre =
-    python -m pip install \
-        --upgrade \
-        --upgrade-strategy eager \
-        '{toxinidir}'
+extras = {[testenv]extras}
 commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py310-matplotlib]
-install_command = {[testenv:py310]install_command}
-deps = {[testenv:py310]deps}
-commands_pre =
-    python -m pip install \
-        --upgrade \
-        --upgrade-strategy eager \
-        '{toxinidir}[matplotlib]'
+extras =
+    {[testenv]extras}
+    matplotlib
 commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
-# Test with phonopy_reader extra only
-[testenv:py310-phonopy_reader]
-install_command = {[testenv:py310]install_command}
-deps = {[testenv:py310]deps}
-commands_pre =
-    python -m pip install \
-        --upgrade \
-        --upgrade-strategy eager \
-        '{toxinidir}[phonopy_reader]'
+# Test with phonopy-reader extra only
+[testenv:py310-phonopy-reader]
+extras =
+    {[testenv]extras}
+    phonopy-reader
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
 # Test with brille extra only
 [testenv:py310-brille]
-install_command = {[testenv:py310]install_command}
-deps = {[testenv:py310]deps}
-commands_pre =
-    python -m pip install \
-        --upgrade \
-        --upgrade-strategy eager \
-        '{toxinidir}[brille]'
+extras =
+    {[testenv]extras}
+    brille
 commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py310-all]
-install_command = {[testenv:py310]install_command}
-deps = {[testenv:py310]deps}
-commands_pre =
-    python -m pip install \
-        --upgrade \
-        --upgrade-strategy eager \
-        '{toxinidir}[phonopy_reader,matplotlib,brille]'
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+    brille
 commands =
     {[testenv]test_command} --cov -m multiple_extras
 
+[testenv:py310-no-c]
+install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
+platform = linux
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+    brille
+commands = {[testenv]test_command} -m 'not c_extension'
+
 [testenv:py310-minrequirements-linux]
-whitelist_externals = rm
+skip_install = True
+allowlist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
-platform =
-    linux: linux
+platform = linux
 deps =
     numpy==1.24.0
-    {[testenv:py310]deps}
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
@@ -101,18 +89,18 @@ commands_pre =
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     # Force rebuild of euphonic extension to avoid Numpy clash
     rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
+    python -m pip install '{toxinidir}[matplotlib,phonopy-reader,brille]'
 commands = {[testenv]test_command}
 
 [testenv:py310-minrequirements-mac]
-whitelist_externals = rm
+skip_install = True
+allowlist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
-platform =
-    macos: darwin
+platform = darwin
 deps =
     numpy==1.24.0
-    {[testenv:py310]deps}
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
@@ -120,5 +108,5 @@ commands_pre =
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     # Force rebuild of euphonic extension to avoid Numpy clash
     rm -rf {toxinidir}/build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
+    python -m pip install '{toxinidir}[matplotlib,phonopy-reader,brille]'
 commands = {[testenv]test_command}
