Remove input section

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -1,31 +1,31 @@
 name: Run tests from source on one platform
 on:
   workflow_call:
-    inputs:
-      if:
-        description: 'Run this job'
-        required: false
-        default: true
-        type: boolean
-      os:
-        description: 'Target platform'
-        required: false
-        default: ubuntu-latest
-        type: string
-      python-versions:
-        description: 'Python versions'
-        required: false
-        default: ['3.10', '3.11', '3.12']
-      tox-skip-env:
-        description: 'Regex for skipped tests'
-        required: false
-        default: ''
-        type: string
-      coverage:
-        description: 'Publish coverage'
-        required: false
-        default: false
-        type: boolean
+    # inputs:
+    #   if:
+    #     description: 'Run this job'
+    #     required: false
+    #     default: true
+    #     type: boolean
+    #   os:
+    #     description: 'Target platform'
+    #     required: false
+    #     default: ubuntu-latest
+    #     type: string
+    #   python-versions:
+    #     description: 'Python versions'
+    #     required: false
+    #     default: ['3.10', '3.11', '3.12']
+    #   tox-skip-env:
+    #     description: 'Regex for skipped tests'
+    #     required: false
+    #     default: ''
+    #     type: string
+    #   coverage:
+    #     description: 'Publish coverage'
+    #     required: false
+    #     default: false
+    #     type: boolean
 
 jobs:
   test:
