Now python-versions (array format may be an issue!)

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -12,10 +12,10 @@ on:
         required: false
         default: ubuntu-latest
         type: string
-    #   python-versions:
-    #     description: 'Python versions'
-    #     required: false
-    #     default: ['3.10', '3.11', '3.12']
+      python-versions:
+        description: 'Python versions'
+        required: false
+        default: ['3.10', '3.11', '3.12']
     #   tox-skip-env:
     #     description: 'Regex for skipped tests'
     #     required: false
