--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -16,6 +16,7 @@ on:
         description: 'Python versions'
         required: false
         default: '[''3.10'', ''3.11'', ''3.12'']'
+        type: string
     #   tox-skip-env:
     #     description: 'Regex for skipped tests'
     #     required: false
