--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,17 +19,17 @@ jobs:
       matrix:
         config:
         - os: ubuntu-latest
-          if: always()
+          if: true
           python-versions: ${{((github.event_name == 'workflow_dispatch') && '[''3.10'', ''3.11'', ''3.12'']' || '[''3.10'', ''3.12'']')}}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: true
         - os: windows-latest
-          if: always()
-          python-versions: ${{((github.event_name == 'workflow_dispatch') && '[''3.10'', ''3.11'', ''3.12'']' || '[''3.10'', ''3.12'']')}}
+          if: true
+          python-versions: ${{((github.event_name == 'workflow_dispatch') && '[''3.10'', ''3.11'', ''3.12]' || '[''3.10'', ''3.12'']')}}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: false
         - os: macos-latest
-          if: always()
+          if: true
           python-versions: ${{((github.event_name == 'workflow_dispatch') && '[''3.10'', ''3.11'', ''3.12'']' || '[''3.10'', ''3.12'']')}}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: false
