--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,17 +20,17 @@ jobs:
         config:
         - os: ubuntu-latest
           if: true
-          python-versions: ${{(github.event_name == 'workflow_dispatch') && '3.10\n3.11\n3.12' || '3.10\n3.12'}}
+          python-versions: ${{(github.event_name == 'workflow_dispatch') && '3.10%0A3.11%0A3.12' || '3.10%0A3.12'}}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: true
         - os: windows-latest
           if: true
-          python-versions: ${{(github.event_name == 'workflow_dispatch') && '3.10\n3.11\n3.12' || '3.10\n3.12'}}
+          python-versions: ${{(github.event_name == 'workflow_dispatch') && '3.10%0A3.11%0A3.12' || '3.10%0A3.12'}}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: false
         - os: macos-latest
           if: true
-          python-versions: ${{ (github.event_name == 'workflow_dispatch') && '3.10\n3.11\n3.12' || '3.10\n3.12' }}
+          python-versions: ${{ (github.event_name == 'workflow_dispatch') && '3.10%0A3.11%0A3.12' || '3.10%0A3.12' }}
           tox-skip-env: ${{((github.event_name == 'workflow_dispatch') && '' || '.*?(py311).*?')}}
           coverage: false
         - os: macos-13
