--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -25,31 +25,28 @@ on:
 
 jobs:
   test:
-    if: ${{ inputs.if }}
+    if: inputs.if
     runs-on: ${{ inputs.os }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure tags are fetched for versioning
           fetch-tags: true
-      - name: Setup all supported Python versions
+      - name: Setup min/max supported Python versions
         uses: actions/setup-python@v5
-        if: ${{ inputs.all-python-versions }}
-        with:
-          python-version: |
-            3.10
-            3.11
-            3.12
-      - name: Setup min/max Python versions
-        uses: actions/setup-python@v5
-        if: ${{ ! inputs.all-python-versions }}
         with:
           python-version: |
             3.10
             3.12
 
+      - name: Setup remaining supported Python versions
+        uses: actions/setup-python@v5
+        if: inputs.all-python-versions
+        with:
+          python-version: '3.11'
+
       - name: Install llvm on MacOS
-        if: ${{ startsWith( inputs.os , 'macos' ) }}
+        if: startsWith( inputs.os , 'macos' )
         shell: bash -l {0}
         env:
           # Homebrew location is different on Intel Mac
@@ -61,7 +58,7 @@ jobs:
           echo CPPFLAGS="-I${LLVM_DIR}/include $CPPFLAGS" >> $GITHUB_ENV
 
       - name: Windows - find MSVC and set environment variables
-        if: ${{ startsWith( inputs.os , 'windows' ) }}
+        if: startsWith( inputs.os , 'windows' )
         shell: bash -l {0}
         env:
           MSVC_PREFIX: 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC'
@@ -99,12 +96,12 @@ jobs:
 
       - name: Publish Codacy coverage
         uses: codacy/codacy-coverage-reporter-action@v1
-        if: ${{ inputs.coverage }}
+        if: inputs.coverage
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
 
       - uses: codecov/codecov-action@v3
-        if: ${{ inputs.coverage }}
+        if: inputs.coverage
         with:
           files: tests_and_analysis/test/reports/coverage*.xml
