Tweak TOX_SKIP_ENV logic: use dummy value
The trouble with ${{ test && '' || output }} is that '' is "false-y"
so it returns output even if the test fails.

The return value is treated as a regex for tox env to skip, so as
long as there are no matching envs we can use any string for the "run
all tests" case.

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -35,7 +35,7 @@ jobs:
         3.10
         3.11
         3.12
-      TOX_SKIP_ENV: ${{ inputs.all-python-versions && '' || '.*?(py311).*?' }}
+      TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311).*?' }}
     steps:
       - uses: actions/checkout@v4
         with:
