--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -97,7 +97,7 @@ jobs:
         uses: codacy/codacy-coverage-reporter-action@v1
         if: inputs.coverage
         with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          project-token: ${{ secrets.codacy_project_token }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
 
       - uses: codecov/codecov-action@v3
