--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -43,8 +43,7 @@ jobs:
       os: ${{ matrix.config.os }}
       all-python-versions: ${{ matrix.config.all-python-versions }}
       coverage: ${{ matrix.config.coverage }}
-    secrets:
-      codacy_project_token: ${{ secrets.codacy_project_token }}
+    secrets: inherit
 
   test-docs:
     runs-on: ubuntu-latest
